--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .tmp/
+dotfiles/config/fish/fish_variables
+dotfiles/config/fish/functions
+dotfiles/config/fish/completions
+dotfiles/config/fish/conf.d
