linkする対象を拡大

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,3 +16,9 @@
 
     # --- Mise ---
     ~/.config/mise/config.toml:             dotfiles/config/mise/config.toml
+    
+    # --- VSCode ---
+    ~/Library/Application Support/Code/User/settings.json:  dotfiles/vscode/settings.json
+
+    # --- tmux ---
+    ~/.tmux.conf:                           dotfiles/tmux.conf
