Ghostty 設定更新とリンク追加
- テーマを Japanesque に設定\n- フォントを Cica/16 に変更\n- macOS タイトルバーのプロキシアイコンを非表示\n- クイックターミナルのキーバインド追加 (Alt+Space)\n- install.conf.yaml に Ghostty 設定のリンクを追加

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,9 @@
     ~/Library/Application Support/Code/User/settings.json:  dotfiles/vscode/settings.json
     ~/Library/Application Support/Cursor/User/settings.json:  dotfiles/vscode/settings.json
 
+    # --- Ghostty ---
+    ~/.config/ghostty/config:               dotfiles/config/ghostty/config
+
     # --- tmux ---
     ~/.tmux.conf:                           dotfiles/tmux.conf
 
