--- a/dotfiles/vscode/settings.json
+++ b/dotfiles/vscode/settings.json
@@ -17,7 +17,13 @@
   //   "terminal.integrated.fontSize": 15,                   // エディタと同じサイズで統一感を持たせる
   "terminal.integrated.cursorBlinking": true, // カーソル点滅を有効化して視認性向上
   "terminal.integrated.cursorStyle": "line", // 縦線カーソルでエディタと同じスタイルに
-  //
+  "terminal.integrated.profiles.osx": {
+    "fish": {
+      "path": "/opt/homebrew/bin/fish",
+      "args": ["-l"]
+    }
+  },
+  "terminal.integrated.defaultProfile.osx": "fish",
   // === ワークベンチ／テーマ (Workbench & Theme) ===
   //
   // === ファイル／自動保存 (Files & Auto Save) ===
@@ -27,5 +33,8 @@
   //   "files.associations": {                               // コメント付きJSONなど、拡張子ごとの言語関連付け
   //     "*.json": "jsonc"
   //   },
+  //
+  // === Git (Git) ===
+  "git.blame.editorDecoration.enabled": true,
   "meaningless": "VSCodeが自動で追記する際，最終行に書かれるようする" // 自動追記用のダミーエントリ
 }
