Claude設定をdotbot管理に追加

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,3 +33,6 @@
 
     # --- Neovim ---
     ~/.config/nvim/lua/config/options.lua:          dotfiles/config/nvim/options.lua
+
+    # --- Claude ---
+    ~/.claude/settings.json:               dotfiles/config/claude/settings.json
